# ChangeLog for app-text/highlight
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.18 2008/05/23 14:12:21 drac Exp $

*highlight-2.6.10 (23 May 2008)

  23 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/highlight-2.6.10-conf_dir.patch, +highlight-2.6.10.ebuild:
  Version bump. Move filetypes.conf back to where it belongs wrt #222751,
  thanks to Jeroen Roovers.

  05 May 2008; Samuli Suominen <drac@gentoo.org> highlight-2.6.9.ebuild:
  Replace CFLAGS with CXXFLAGS since it's g++ we are calling.

*highlight-2.6.9 (04 May 2008)

  04 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/highlight-2.6.9-asneeded.patch, +files/highlight-2.6.9-gcc43.patch,
  +highlight-2.6.9.ebuild:
  Version bump with GCC 4.3 and -Wl,--as-needed patch by Peter Alfredsen.

  16 Apr 2008; Jeroen Roovers <jer@gentoo.org> highlight-2.4.8.ebuild:
  Marked ~hppa too.

  06 Sep 2007; Steve Dibb <beandog@gentoo.org> highlight-2.4.8.ebuild:
  amd64 stable

  26 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  highlight-2.4.8.ebuild:
  Stable on sparc

  24 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  highlight-2.4.8.ebuild:
  Keyworded ~sparc wrt #129395

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  highlight-2.4.8.ebuild:
  ppc stable, bug #129395

  12 Mar 2007; Leonardo Boshell <leonardop@gentoo.org> metadata.xml:
  Replacing text-markup herd with the new sgml and tex herds.

  03 Mar 2007; nixnut <nixnut@gentoo.org> highlight-2.4.8.ebuild:
  Added ~ppc wrt bug 129395

  02 Mar 2007; Raúl Porcel <armin76@gentoo.org> highlight-2.4.8.ebuild:
  x86 stable wrt bug 129395

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*highlight-2.4.8 (03 Feb 2007)

  03 Feb 2007; Simon Stelling <blubb@gentoo.org> +highlight-2.4.8.ebuild:
  version bump and add ~amd64; bug 154789

  09 Mar 2006; Martin Ehmsen <ehmsen@gentoo.org> highlight-2.4.3.ebuild: